# machine_learning

./: .gitignore  LICENSE  README.md  eval.py  predict.py  pyproject.toml  requirements.txt  train.py
Auto_Encoder/: auto_encoder.py
Auto_Encoder/checkpoints/: best_model.pth  checkpoint_epoch_109.pth  checkpoint_epoch_119.pth  checkpoint_epoch_129.pth  checkpoint_epoch_139.pth  checkpoint_epoch_149.pth  checkpoint_epoch_159.pth  checkpoint_epoch_169.pth  checkpoint_epoch_179.pth  checkpoint_epoch_189.pth  checkpoint_epoch_19.pth  checkpoint_epoch_199.pth  checkpoint_epoch_29.pth  checkpoint_epoch_39.pth  checkpoint_epoch_49.pth  checkpoint_epoch_59.pth  checkpoint_epoch_69.pth  checkpoint_epoch_79.pth  checkpoint_epoch_89.pth  checkpoint_epoch_9.pth  checkpoint_epoch_99.pth
Auto_Encoder/doc/: padding.txt
Auto_Encoder/logs/: events.out.tfevents.1740491468.yangxf.8886.0  events.out.tfevents.1740491560.yangxf.9520.0  events.out.tfevents.1740491977.yangxf.12270.0  events.out.tfevents.1740529481.yangxf.19696.0  events.out.tfevents.1740618454.yangxf.8095.0  events.out.tfevents.1740638530.yangxf.87609.0  events.out.tfevents.1740638831.yangxf.96382.0  events.out.tfevents.1740639289.yangxf.106180.0  events.out.tfevents.1740639611.yangxf.115004.0  events.out.tfevents.1741060149.yangxf.67038.0  events.out.tfevents.1741067844.yangxf.107411.0  events.out.tfevents.1741067894.yangxf.107778.0  events.out.tfevents.1741067989.yangxf.108429.0  events.out.tfevents.1741068281.yangxf.117159.0  events.out.tfevents.1741068599.yangxf.125973.0  events.out.tfevents.1741072439.yangxf.156877.0  events.out.tfevents.1741073956.yangxf.165936.0  events.out.tfevents.1741074156.yangxf.167249.0  events.out.tfevents.1741074188.yangxf.167559.0  (+33 more)
GAN/: config.yaml  data_load.py  main.py  models.py  utils.py
Gaussian Process/: 4.modellist_gp.py
VAE/: decoder.py  encoder.py
docs/: GAN.txt
examples/: abandoned.py  ae_train.py  depulated.txt  diffusion_train.py  gan_train.py  heatmpas.py  transforms.py  vae_train.py  visualize_img_bboxes.py  vq_vae_train.py
test/: utils_test.py
tests/: 1.py  2.py  3.py  4.py  aug.py  dataset_test.py  dwt.py  gan.py  models.py  multimodaldataset.py  multimodalyolodataset.py  show_mask.py  streams.py  utils_test.py  visualize_img_bboxes.py  yolo_dataset_test.py  yolodataset.py  yolodataset_test.py
(+423 files in other folders)
