[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machine_learning" 
version = "0.1.0"           
description = "A training framework for various types of machine learning algorithms."
readme = "README.md"          
requires-python = ">=3.8"
license = "GPL-3.0-only"              
authors = [
    {name = "Xiaofan Yang", email = "1062033103@qq.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/WSYANGSX/machine_learning"
Repository = "https://github.com/WSYANGSX/machine_learning.git"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*", "examples*"]
